# prison-architect-savefile

./: Cargo.toml  README.md
examples/: fix_programs.rs  generate_island.rs  inspect_programs.rs  optimize_teachers.rs  promote_prisoners.rs  score.rs  upgrade_utilities.rs  write_materials.rs
src/: format.rs  lib.rs  parse.rs
tests/: roundtrip.rs
