[package]
name = "prison-architect-savefile"
version = "0.1.0"
edition = "2021"
categories = ["parser-implementations"]
license = "MIT OR Apache-2.0"
readme = "README.md"
include = [
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/**/*.rs",
    "!src/**/tests.rs",
]

[dependencies]
fs-err = "2.11.0"

[dev-dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.11", features = ["derive"] }
