[package]
name = "prison-architect-savefile"
description = "Parser for prison architect savefiles"
version = "0.2.0"
edition = "2021"
categories = ["parser-implementations"]
license = "MIT OR Apache-2.0"
readme = "README.md"
include = [
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/**/*.rs",
    "!src/**/tests.rs",
]

[dependencies]
fs-err = "2.11.0"
indexmap = "2.1.0"

[dev-dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.11", features = ["derive"] }
noise = "0.8.2"
rand = { version = "0.8.5", features = ["small_rng"] }
